# Bi_Trade

./: .env.example  .gitignore  COMO_USAR.md  DEPLOY_RENDER.md  QUICKSTART.md  README.md  TRADING_REAL.md  config.yaml  install.sh  pyproject.toml  render.yaml  requirements.txt  setup.py  start_bot.bat  start_bot.ps1  test_pretrain.py
app/: __init__.py  config.py  factory.py  main.py
app/backtest/: engine.py  report.py
app/broker/: base.py  iqoption.py  mock.py
app/data/: loaders.py  real_loader.py
app/features/: ta_features.py
app/live/: runner.py
app/models/: bandit.py  online.py
app/risk/: manager.py
app/strategies/: breakout.py  meanrev.py  trend.py
app/utils/: git_sync.py  logging.py
app/web/: __init__.py  api.py
docs/: backtest_summary.md
tests/: __init__.py  test_config_aliases.py  test_config_overrides.py  test_git_sync.py  test_models.py  test_risk_manager.py
