[tool.poetry]
name = "binary-trading-bot"
version = "1.0.0"
description = "Robô de trading de opções binárias com IA e aprendizado online"
authors = ["Binary Trading Bot"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
river = "^0.21.0"
pyyaml = "^6.0"
python-dotenv = "^1.0.0"
click = "^8.1.0"
jinja2 = "^3.1.0"
plotly = "^5.17.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"
mypy = "^1.6.0"
types-pyyaml = "^6.0.0"
types-requests = "^2.31.0"

[tool.poetry.scripts]
app = "app.main:cli"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
